--- a/css/style.css
+++ b/css/style.css
@@ -1,46 +1,113 @@
 /* Our Customized CSS */
-/* Author: Rezaul Karim
-Website: Hot Gadget Ecommerce
+/* Developer: Rezaul Karim
+Website: eSchool Project | Assignment - 2
 Course: https://bangla2.programming-hero.com/
 Unit: Nine (9)
 */
-.container {
+
+/* Carousel and Menubar */
+li {
+    list-style: none;
+}
+a {
+    text-decoration: none;
+    color: white;
+}
+a:hover {
+    text-decoration: none;
+}
+section {
     margin-bottom: 100px;
 }
-.navbar-brand img {
-    width: 80px;
-    height: 30px;
+#carousel-section {
+    background-color: #F0FFF0;
 }
-.buy-now-button {
-    background-image: linear-gradient(to top, tomato, yellow);
+.logo-img {
+    width: 118.07px;
+    height: 29px;
+}
+.crousel-item {
+    padding: 20px 40px;
+    width: 50%;
+}
+.carousel-btn {
+    padding: 12px 36px;
+    width: 153px;
+    height: 43px;
+    border: none;
     color: white;
-    border: none;
-    border-radius: 8px;
-    padding: 9px 25px;
-    cursor: pointer;
+
+    background: #21B573;
+    border-radius: 33px;
 }
-.card {
-    box-shadow: 7px 7px 7px 10px lightgray;
-    border: none;
+.nav-item a {
+    color: #000000;
+    font-size: 16px;
+    line-height: 24px;
+}
+.carousel-txt h1 {
+    font-family: Poppins;
+    font-size: 48px;
+    line-height: 40px;
+    font-weight: bold;
+}
+/* End of Section one | Carousel and Menu */
+
+/* Second Section | ICON */
+.icon-image {
+    background-color: #F8FFFB;
     border-radius: 10px;
-}
-.card-footer {
-    border: none;
-}
-.container {
-    margin-bottom: 150px;
-}
-.h1-margin {
-    border-bottom: 6px solid lightslategray;
-    width: 200px;
-    border-radius: 10px;
+    margin-left: 30px;
+    width: 270px;
     padding: 10px;
 }
-.bx-shadow {
-    box-shadow: 2px 2px 3px lightslategray;
-    padding: 10px;
+.icon-image img {
+    width: 80px;
+    height: 95px;
+    align-items: center;
+}
+.icon-image h1 {
+    font-size: 20px;
+    margin-top: 30px;
+}
+.icon-row {
+    background: #FFFFFF;
+    box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
 }
-.bx-shadow img {
-    width: 100px;
+/* End of Section Two */
+
+/* Section Three */
+
+/* End of Section Three */
+
+/* Section Four */
+.testimonial img {
+    width: 80px;
+    height: 80px;
 }
+#testimonials h1 {
+    font-size: 36px;
+    font-weight: bold;
+    line-height: 54px;
+    margin-bottom: 50px;
+}
+.testimonial p {
+    text-align: justify;
+}
+/* End of Section Four */
+/* Section Five | Contact us */
+
+/* End of Section five */
+
+/* Footer Section */
+footer {
+    background-color: #282531;
+    color: white;
+    padding: 20px;
+    margin-top: 50px;
+}
+.copyright span {
+    color: red;
+}
+/* End of Footer Section */
